# regress

./: a.py  b.py  hello.py  parsed_data.csv  pyproject.toml  table2.xlsx
data/: cox_by_age_55.html  cox_by_age_group.html  cox_by_chemo.html  cox_by_gender.html  cox_by_grade.html  cox_by_income.html  cox_by_marital_status.html  cox_by_nhia.html  cox_by_race.html  cox_by_residence.html  cox_by_stage.html  cox_by_surgery.html  cox_by_year.html  data.xlsx  data_back.xlsx  multi_cox.html  multi_cox_no_marital.html  multi_cox_no_marital_and_age_55.html
