[project]
name = "cox-regress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lifelines>=0.30.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
